Fix error page language switch z-index
The language switcher lays below the page container. Therefore
the language switcher isn;t clickable on the error page. After changing
the z-index the required behaviour is restored.

--- a/theme/material/stylesheets/application/base/_layout.css.sass
+++ b/theme/material/stylesheets/application/base/_layout.css.sass
@@ -1,5 +1,6 @@
 .l-container
   max-width: $container-width
+  z-index: 0
   padding: 1rem
   .lt-ie9 &
     max-width: $container-width-em
